--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   background-color: #121214;
   background-image: url(./assests/bg.svg);
   background-position-x: center;
-  background-position-y: 55%;
+  background-position-y: -715px;
 }
 
 body * {
@@ -26,6 +26,13 @@ body * {
 
 header {
   margin-bottom: 63px;
+  text-align: center;
+}
+
+#cards {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
 
 .card {
@@ -56,7 +63,7 @@ header {
   text-transform: uppercase;
 }
 
-.card ul{
+.card ul {
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -69,14 +76,14 @@ header {
   justify-content: space-between;
 }
 
-.card ul li + li{
+.card ul li + li {
   padding-top: 24px;
   border-top: 1px solid #323238;
 }
 
-.card ul li strong{
+.card ul li strong {
   font-weight: 900;
   font-size: 36px;
-  line-height: 125%;  
-  color: #E1E1E6;
+  line-height: 125%;
+  color: #e1e1e6;
 }
