--- a/style.css
+++ b/style.css
@@ -4,15 +4,37 @@
   box-sizing: border-box;
 }
 
+:root{
+  --card-color-primary: #338AF3;
+  --card-title-border-color: #338AF3;
+  --card-bg-color: #202024;
+  --bg: url(./assets/bg-blue.svg);
+}
+
+body.yellow{
+  --card-color-primary: #F7DD43;
+  --card-title-border-color: #746615; 
+  --card-bg-color: #1d1c19;
+  --bg: url(./assets/bg-yellow.svg);
+}
+
+body.green{
+  --card-color-primary: #047C3F;
+  --card-title-border-color: #047C3F; 
+  --card-bg-color: #1a1f1b;
+  --bg: url(./assets/bg-green.svg);
+}
+
 ul {
   list-style: none;
 }
 
 body {
   background-color: #121214;
-  background-image: url(./assests/bg.svg);
-  background-position-x: center;
-  background-position-y: -715px;
+  background-image: var(--bg);
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 body * {
@@ -21,7 +43,8 @@ body * {
 
 #app {
   width: fit-content;
-  margin: 52px auto;
+  margin: auto;
+  padding-top: 52px;
 }
 
 header {
@@ -38,14 +61,14 @@ header {
 .card {
   padding: 32px 23px;
   text-align: center;
-  background: #202024;
-  border-bottom: 2px solid #338af3;
+  background: var(--card-bg-color);
+  border-bottom: 2px solid var(--card-color-primary);
   border-radius: 6px;
 }
 
 .card h2 {
   padding: 8px 16px;
-  border: 1px solid #338af3;
+  border: 1px solid var(--card-title-border-color);
   border-radius: 6px;
   gap: 16px;
   display: flex;
@@ -54,7 +77,7 @@ header {
   width: fit-content;
   margin-inline: auto;
   margin-bottom: 53px;
-  color: #f7dd43;
+  color: #F7DD43;
 }
 
 .card h2 span {
@@ -86,4 +109,39 @@ header {
   font-size: 36px;
   line-height: 125%;
   color: #e1e1e6;
+}
+
+.card h2:hover,
+.card ul li strong:hover,
+.card ul li img:hover{
+  transform: scale(1.1);
+}
+
+.card h2:hover,
+.card ul li strong:hover,
+.card ul li img:hover{
+  transition: transform 0.3s;
+}
+
+.card{
+  opacity: 0;
+  animation: appear .2s forwards;
+}
+
+@keyframes appear{
+  0%{
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+@media(min-width: 700px){
+  #cards{
+    max-width: 670px;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
