--- a/style.css
+++ b/style.css
@@ -48,10 +48,16 @@ body * {
 }
 
 header {
-  margin-bottom: 63px;
+  margin-bottom: 10px;
   text-align: center;
 }
 
+header p {
+  display: flex;
+  justify-content: center;
+  color: white;
+  
+}
 #cards {
   display: flex;
   flex-direction: column;
@@ -140,7 +146,7 @@ header {
 
 @media(min-width: 700px){
   #cards{
-    max-width: 670px;
+    max-width: 1024;
     flex-direction: row;
     flex-wrap: wrap;
   }
